--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,26 @@ a {
   color: #00B7FF;
 }
 
+h1{
+  color: blueviolet;
+}
 .icecreamAttr {
   background-color: aquamarine;
   width: 120px;
+  border-style:inset;
+  margin: 10px;
  }
+
+ input{
+  width: 150px;
+  border-style:double;
+  margin: 10px;
+}
+
+ input[type= submit] {
+   background-color: gray;
+   width: 120px;
+   margin: 10px;
+   border-color: black;
+ }
+
