--- a/views/icecreams.pug
+++ b/views/icecreams.pug
@@ -5,13 +5,12 @@ block content
   h1= title
   - let result = results
   div(class= "container-fluid")
-    div(class = "row")
+    div(class = "col m-1")
       each item,index in result
-        div(class= "col-sm-2" , onclick=`buy(${index})`) #{item.icecream_flavour}
-        div(class= "col-sm-2", onclick=`buy(${index})`) #{item.icecream_quantity}
-        div(class= "col-sm-2", onclick=`buy(${index})`) #{item.icecream_cost}
-
+        - let destination = `dispatch(\"/icecreams/update?id=${item._id}\")`
+        div(class="row-sm-2" class="m-1") Item #{item.icecream_flavour}(#{item.icecream_quantity}) is #{item.icecream_cost}
+        button.btn( class="btn-primary m-1", onclick= destination) Update
   script.
-    function buy(itemNum){
-      alert(`You purchased item ${itemNum+1}`)
+    function dispatch(path){
+      window.location.href=path
     }
