--- a/views/icecreams.pug
+++ b/views/icecreams.pug
@@ -3,13 +3,19 @@ extends layout
 block content
 
   h1= title
+  - let des = `dispatch(\"/icecreams/create\")`
+  button.btn( class="btn-secondary m-1" onclick= des) Create
   - let result = results
   div(class= "container-fluid")
     div(class = "col m-1")
       each item,index in result
         - let destination = `dispatch(\"/icecreams/update?id=${item._id}\")`
+        - let destination1 = `dispatch(\"/icecreams/detail?id=${item._id}\")`
+        - let destination2 = `dispatch(\"/icecreams/delete?id=${item._id}\")`
         div(class="row-sm-2" class="m-1") Item #{item.icecream_flavour}(#{item.icecream_quantity}) is #{item.icecream_cost}
         button.btn( class="btn-primary m-1", onclick= destination) Update
+        button.btn( class="btn-success m-1", onclick= destination1) Details
+        button.btn( class="btn-danger m-1", onclick= destination2) Delete
   script.
     function dispatch(path){
       window.location.href=path
